<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1b138"
    android:orientation="vertical"
    tools:context="com.jprarama.singlescreenapp.MainActivity"
    >

    <ImageView
        android:layout_weight="0.5"
        android:src="@drawable/jollibee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:background="@color/imageBg"
        />

    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/BaseText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorTitle"
            android:text="@string/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/BaseText"
            android:text="@string/company_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/BaseText"
                android:src="@android:drawable/ic_dialog_map"
                android:layout_width="@dimen/icon_size"
                android:scaleType="centerInside"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/BaseText"
                android:textStyle="bold"
                android:text="@string/location_label"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            style="@style/BaseText"
            android:layout_marginLeft="@dimen/text_indent"
            android:text="@string/location_name"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/BaseText"
                android:src="@android:drawable/stat_sys_phone_call"
                android:layout_width="@dimen/icon_size"
                android:scaleType="centerInside"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/BaseText"
                android:textStyle="bold"
                android:text="@string/phone_label"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            style="@style/BaseText"
            android:layout_marginLeft="@dimen/text_indent"
            android:text="@string/phone_value"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            style="@style/BaseText"
            android:text="@string/company_website"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
